web-frontend-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-frontend-svc
  labels:
    app: web-frontend
spec:
   ports:
   - port: 80
     name: http
     targetPort: 5000
     protocol: TCP
   selector:
     app: web-frontend-rc
